# pdf-parser.rs

./: Cargo.toml  README.md  TODO.md
assets/: test_object_with_stream  test_object_with_stream.expected  test_stream  test_trailer  test_xref
examples/: parser.rs
src/: error.rs  lib.rs  object.rs  parser.rs  utils.rs
tests/: parser.rs
