[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "pdf_parser"
path = "src/lib.rs"
crate-type = ["lib"]
test = true

[dependencies]
nom = "7.1.3"
thiserror = "1.0.40"

[dev-dependencies]
matches = "0.1.10"
pretty_assertions = "1.3.0"

[[test]]
name = "parser"
